--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 		"yiisoft/yii2" : "~2.0.14",
 		"yiisoft/yii2-bootstrap" : "~2.0.0",
 		"yiisoft/yii2-swiftmailer" : "~2.0.0",
-		"yiisoft/yii2-httpclient" : "^2.0"
+		"yiisoft/yii2-httpclient" : "^2.0",
+		"yiisoft/yii2-imagine": "^2.1"
 	},
 	"require-dev" : {
 		"yiisoft/yii2-debug" : "~2.0.0",
